login-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: jairvercosa/login-node:v22
        ports:
        - containerPort: 4000
---

apiVersion: v1
kind: Service
metadata:
  name: login
  labels:
    app: login
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: login

---
