ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: login
  namespace:  default
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: login.vercosa.life
      http:
        paths:
          - path: "/"
            backend:
              serviceName: login
              servicePort: http
